[package]
name = "complete-io"
version = "0.1.0"

[dependencies]
futures = "0.1.17"
log = "0.3"
bytes = "0.4"

tokio-core = { version = "0.1.10", optional = true }
mio = { version = "0.6.11", optional = true }
net2 = { version = "0.2.31", optional = true }

scoped-tls = { version = "0.1", optional = true }
miow = { version = "0.2.1", optional = true }
winhandle = { version = "0.1.0", optional = true }
winapi = { version = "0.2.8", optional = true }
kernel32-sys = { version = "0.2.2", optional = true }
ws2_32-sys = { version = "0.2.1", optional = true }

[features]
default = ["tokio", "iocp"]
tokio = ["tokio-core", "mio"]
iocp = ["scoped-tls", "miow", "winapi", "winhandle", "kernel32-sys", "ws2_32-sys", "net2"]