[package]
name = "complete-io"
version = "0.1.0"

[dependencies]
futures = "0.1.17"
log = "0.3"
bytes = "0.4"
cfg-if = "0.1"

net2 = { version = "0.2.31", optional = true }

miow = { version = "0.2.1", optional = true }
winhandle = { version = "0.1.0", optional = true }
winapi = { version = "0.2.8", optional = true }
kernel32-sys = { version = "0.2.2", optional = true }
ws2_32-sys = { version = "0.2.1", optional = true }

[features]
default = ["iocp"]
iocp = [ "miow", "winapi", "winhandle", "kernel32-sys", "ws2_32-sys", "net2"]