[package]
name = "complete-io"
version = "0.1.0"

[dependencies]
futures = "0.1.17"
net2 = "0.2.31"
log = "0.3"
bytes = "0.4"
bitflags = "1.0.0"
cfg-if = "0.1"

libc = { version = "0.2.33", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
miow = { version = "0.2.1", optional = true }
winhandle = { version = "0.1.0", optional = true }
winapi = { version = "0.2.8", optional = true }
kernel32-sys = { version = "0.2.2", optional = true }
ws2_32-sys = { version = "0.2.1", optional = true }

[features]
default = ["iocp", "epoll"]
iocp = ["miow", "winapi", "winhandle", "kernel32-sys", "ws2_32-sys"]
epoll = ["libc"]